--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 This repository contains the code for the dbcti-paper.
 
 ## Data structure
+* `datasets` file contains simulated data included in the paper. Real datasets are too large to be included and are available at the corresponding GEO datasets. 
 * `simulation_and_real_data` file contains codes for different tools constructing cell trajectories
 * `evaluation` file contains codes for evaluating performances of tools
 * `case_study` file contains codes for performing case study
